--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sweetalert2np",
+  "name": "sweetalert2",
   "version": "11.6.14",
   "repository": "sweetalert2/sweetalert2",
   "homepage": "https://sweetalert2np.github.io/",
